site/public/css/rotatingsectionsform.css
p {
    margin-block: 1em;
}

fieldset > * {
    margin-bottom: 0.5em;
}

#fewest-exclude > label {
    display: block;
    margin: 0.5em 0;
}

#redo-data,
#fewest-exclude {
    margin-left: 13px;
    border-left: solid var(--solution-text-background) 1px;
    padding-left: 13px;
}

#redo-data > label {
    display: block;
    margin: 0.5em 0;
}

table caption {
    font-size: 1.17rem;
    font-weight: bold;
    text-align: center;
    caption-side: top;
    border: 0;
}

table caption .subcaption {
    font-size: 1rem;
}

.delete-section-cell {
    text-align: left;
}

.reg-section-table {
    table-layout: fixed;
    width: 100%;
}

.reg-section-table th:first-child,
.reg-section-table td:first-child {
    width: 60px;
}

.reg-header-row {
    display: flex;
    flex-wrap: flex;
    justify-content: space-between;
    width: 100%;
}

.reg-section-title {
    flex-wrap: flex;
}

.add-registration-section-btn {
    margin-bottom: 8px;
}

